src/main/java/com/github/anton_petrunov/seven_winds_test/error/apierror/ApiSubError.java
package com.github.anton_petrunov.seven_winds_test.error.apierror;

public abstract class ApiSubError {
}
